# PhantomPDF

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
phantompdf/: __init__.py  cleaner.py  cli.py  engine.py  fonts.py  forensics.py  parser.py
tests/: test_cleaner.py  test_cli.py  test_engine.py  test_fonts.py  test_forensics.py  test_parser.py
